# Bookvia

./: .gitignore  auth_testing.md  backend_test.py  design_guidelines.json
backend/: .env  .env.production.template  .gitignore  RAILWAY_DEPLOY.md  main.py  nixpacks.toml  pyproject.toml  requirements.txt  server.py
backend/core/: config.py  database.py  dependencies.py  helpers.py  logging_config.py  security.py  security_hardening.py  stripe_config.py
backend/data/: cities.py  countries.py
backend/docs/: ENV_VARIABLES.md
backend/middleware/: __init__.py  rate_limit.py
backend/models/: country.py  enums.py  schemas.py
backend/routers/: admin.py  auth.py  bookings.py  branches.py  businesses.py  categories.py  finance.py  notifications.py  payments.py  push.py  reviews.py  seo.py  services.py  stripe_connect.py  system.py  terms.py  users.py  waitlist.py  winback.py
backend/schemas/: __init__.py  auth.py  booking.py  business.py  finance.py  location.py  worker.py
backend/services/: business_qr.py  city_normalize.py  cloudinary_service.py  email.py  funds_state.py  legal_file_service.py  mongo_backup.py  monthly_pnl_report.py  notifications.py  payout_statement.py  public_code.py  push_notifications.py  reconciliation.py  refund_choice_reminder.py  sms.py  storage.py  strikes.py  stripe_refunds.py  stripe_settlements.py  subscription_enforcement.py  wallet.py  winback.py
backend/tests/: test_activity_log_phase3.py  test_admin_dashboard_v2.py  test_admin_expanded_features.py  test_admin_login_fix.py  test_admin_new_features.py  test_admin_permissions.py  (+86 more)
(+329 files in other folders)
