[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bookvia-backend"
version = "1.0.0"
description = "Bookvia - Professional Booking Marketplace API"
requires-python = ">=3.10"

[tool.black]
line-length = 100
target-version = ['py310']

[tool.isort]
profile = "black"
line_length = 100
